update deploy var syntax

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Build project
         run: npm run build
         env:
-          VITE_APP_CONFIG_BASE: $VITE_APP_CONFIG_BASE
-          VITE_APP_ORDERCLOUD_BASE_API_URL: $VITE_APP_ORDERCLOUD_BASE_API_URL
-          VITE_APP_ORDERCLOUD_CLIENT_ID: $VITE_APP_ORDERCLOUD_CLIENT_ID
-          VITE_APP_ORDERCLOUD_SCOPE: $VITE_APP_ORDERCLOUD_SCOPE
-          VITE_APP_ORDERCLOUD_ALLOW_ANONYMOUS: $VITE_APP_ALLOW_ANONYMOUS
+          VITE_APP_CONFIG_BASE: ${{ vars.VITE_APP_CONFIG_BASE }}
+          VITE_APP_ORDERCLOUD_BASE_API_URL: ${{ vars.VITE_APP_ORDERCLOUD_BASE_API_URL }}
+          VITE_APP_ORDERCLOUD_CLIENT_ID: ${{ vars.VITE_APP_ORDERCLOUD_CLIENT_ID }}
+          VITE_APP_ORDERCLOUD_SCOPE: ${{ vars.VITE_APP_ORDERCLOUD_SCOPE }}
+          VITE_APP_ORDERCLOUD_ALLOW_ANONYMOUS: ${{ vars.VITE_APP_ALLOW_ANONYMOUS }}
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
