--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,62 +1,57 @@
-name: Deploy
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
+    branches: ['main']
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-
-      - name: Build project
-        run: npm run build
-        env:
-          VITE_APP_CONFIG_BASE: ${{ vars.VITE_APP_CONFIG_BASE }}
-          VITE_APP_ORDERCLOUD_BASE_API_URL: ${{ vars.VITE_APP_ORDERCLOUD_BASE_API_URL }}
-          VITE_APP_ORDERCLOUD_CLIENT_ID: ${{ vars.VITE_APP_ORDERCLOUD_CLIENT_ID }}
-          VITE_APP_ORDERCLOUD_SCOPE: ${{ vars.VITE_APP_ORDERCLOUD_SCOPE }}
-          VITE_APP_ORDERCLOUD_ALLOW_ANONYMOUS: ${{ vars.VITE_APP_ALLOW_ANONYMOUS }}
-
-
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v3
-        with:
-          name: production-files
-          path: ./dist
-
+  # Single deploy job since we're just deploying
   deploy:
-    name: Deploy
-    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
+    env:
+      VITE_APP_CONFIG_BASE: ${{ vars.VITE_APP_CONFIG_BASE }}
+      VITE_APP_ORDERCLOUD_BASE_API_URL: ${{ vars.VITE_APP_ORDERCLOUD_BASE_API_URL }}
+      VITE_APP_ORDERCLOUD_CLIENT_ID: ${{ vars.VITE_APP_ORDERCLOUD_CLIENT_ID }}
+      VITE_APP_ORDERCLOUD_SCOPE: ${{ vars.VITE_APP_ORDERCLOUD_SCOPE }}
+      VITE_APP_ORDERCLOUD_ALLOW_ANONYMOUS: ${{ vars.VITE_APP_ALLOW_ANONYMOUS }}
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Node
+        uses: actions/setup-node@v3
         with:
-          name: production-files
-          path: ./dist
-
+          node-version: 18
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          # Upload dist repository
+          path: './dist'
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        env:
-          VITE_APP_CONFIG_BASE: ${{ secrets.VITE_APP_CONFIG_BASE }}
-          VITE_APP_ORDERCLOUD_BASE_API_URL: ${{ secrets.VITE_APP_ORDERCLOUD_BASE_API_URL }}
-          VITE_APP_ORDERCLOUD_CLIENT_ID: ${{ secrets.VITE_APP_ORDERCLOUD_CLIENT_ID }}
-          VITE_APP_ORDERCLOUD_SCOPE: ${{ secrets.VITE_APP_ORDERCLOUD_SCOPE }}
-          VITE_APP_ORDERCLOUD_ALLOW_ANONYMOUS: ${{ secrets.VITE_APP_ALLOW_ANONYMOUS }}
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+        id: deployment
+        uses: actions/deploy-pages@v2
